# GravePitch

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
include/gravepitch/core/: Note.h  PitchDetector.h  PitchSmoother.h  ReadoutContinuity.h  RealtimeReadout.h  TunerEngine.h  Tuning.h
resources/fonts/: GravePitchCjkSubset.md
resources/i18n/: zh-Hans.txt
resources/macos/: Info.plist
resources/macos/en.lproj/: InfoPlist.strings
resources/macos/zh-Hans.lproj/: InfoPlist.strings
src/core/: Note.cpp  PitchDetector.cpp  PitchSmoother.cpp  ReadoutContinuity.cpp  TunerEngine.cpp  Tuning.cpp
src/juce/: LatestAnalysisWindowExchange.cpp  LatestAnalysisWindowExchange.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RealtimePitchAnalyzer.cpp  RealtimePitchAnalyzer.h
tests/: core_tests.cpp  plugin_processor_tests.cpp  realtime_analyzer_tests.cpp  realtime_pipeline_tests.cpp
